# guard

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .postil.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  INSTALL.md  README.md  ROADMAP.md  SECURITY.md  build.rs  deny.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml
config/: system-prompt-gating.md  system-prompt-readonly.md  system-prompt-safe.md
ctf/: ADVERSARY.md  BASHCONTROL.md  Containerfile.adversary  Containerfile.agent  Containerfile.local  Containerfile.remote  DESIGN.md  ctf-attacker-prompt.md  ctf-prompt.md  entrypoint-adversary.sh  scenarios.yaml
fuzz/: Cargo.toml
fuzz/corpus/llm_response_parse/: content_parts.json  fenced_content.json  json_content.json  provider_error.json  tool_call.json
fuzz/corpus/mcp_jsonrpc/: initialize.json  missing_method.json  session_status.json  tools_call_batch.json  tools_call_run.json
fuzz/corpus/security_boundaries/: kubeconfig.yaml  kubernetes.txt  policy.yaml  redaction.txt
fuzz/corpus/ssh_readonly/: agent_forwarding.txt  batchmode_id.txt  hostkey_df.txt  port_login_uname.txt  proxy_between.txt
fuzz/corpus/verb_coverage/: coverage_cells.txt  deny_cell.txt  empty_command.txt  session_verb.txt  templated_params.txt
fuzz/corpus/wire_protocol/: full_gating.json  minimal.json  path_binary.json  ssh_hostkey.json  verb_invocation.json
fuzz/fuzz_targets/: llm_response_parse.rs  mcp_jsonrpc.rs  security_boundaries.rs  ssh_readonly.rs  verb_coverage.rs  wire_protocol.rs
src/: env.rs  (+28 more)
(+109 files in other folders)
